[package]
name = "onionfans"
version = "0.1.0"
authors = ["Dowland Aiello <dowlandaiello@gmail.com>"]
edition = "2018"

[dependencies]
sled = "0.34.6"
serde = "1.0.118"
rust-argon2 = "0.8"
rand = "0.8.1"
reqwest = { version = "0.11", features = ["json"] }
async-trait = "0.1.42"
futures = "0.3.9"
serde_json = "1.0"
tokio = { version = "1.0.1", features = ["full"] }
actix-web = "4.0.0-beta.1"
actix-session = "0.4.0"
actix-files = "0.6.0-beta.1"
bincode = "1.3.1"
askama = "0.10.5"
actix = "0.11.0-beta.1"
actix-rt = "2.0.0-beta.2"
chrono = "0.4.19"
